5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1723_2496.log
== TEST (2019-05-14 10:16:39) 
-- CODE:
num = int(input("digite o numero: "))

ac=0

while(num!=-1):
	soma = ac + num
	num = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:17:05) 
-- CODE:
num = int(input("digite o numero: "))

ac=0

while(num!=-1):
	soma = ac + num
	num = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:17:15) 
-- CODE:
num = int(input("digite o numero: "))

ac=0

while(num!=-1):
	soma = ac + num
	num = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:17:55) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while(num!=-1):
	soma = ac + num
	a = int(input("digite o numero: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(num!=-1):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:10) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = ac + num
	a = int(input("digite o numero: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = ac + num
NameError: name 'ac' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:18:12) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = ac + num
	a = int(input("digite o numero: "))
print(soma)
-- EXECUTION TIME:
0.136254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 6, in <module>
    soma = ac + num
NameError: name 'ac' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:15) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = ac + num
	a = int(input("digite o numero: "))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma = ac + num
NameError: name 'ac' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:18:32) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = soma + a
	a = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:18:40) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = soma + a
	a = int(input("digite o numero: "))
print(soma)
-- EXECUTION TIME:
0.228249
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:27:16) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = soma + a
	a = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:28:45) 
-- CODE:
a = int(input("digite o numero: "))

soma=0

while (a != -1):
	soma = soma + a
	a = int(input("digite o numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
